--- a/package.json
+++ b/package.json
@@ -34,15 +34,17 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-plugin-styled-components": "^2.1.4",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "^51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
