--- a/app.json
+++ b/app.json
@@ -27,7 +27,14 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow Nutrieye to access your camera"
+        }
+      ],
+      "expo-localization"
     ],
     "experiments": {
       "typedRoutes": true
