--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.4",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
