feat: better styles + logic fixes

--- a/app.json
+++ b/app.json
@@ -34,7 +34,16 @@
           "cameraPermission": "Allow Nutrieye to access your camera"
         }
       ],
-      "expo-localization"
+      "expo-localization",
+      "expo-font",
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "savePhotosPermission": "Allow $(PRODUCT_NAME) to save photos.",
+          "isAccessMediaLocationEnabled": true
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
